--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backenddeck",
   "version": "1.0.0",
   "description": "a production level backend code template",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +12,8 @@
     "backend"
   ],
   "author": "anushka halder",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
